projects pages completed

--- a/index.html
+++ b/index.html
@@ -71,31 +71,31 @@ I'm interested in data science and machine learning, I'm also passionate about o
 
 						<!-- One -->
 							<section id="one" class="tiles">
+								
 								<article>
 									<span class="image">
-										<img src="images/cap.png" alt="" />
+										<img src="images/netlogo.gif" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="project_greenguy.html" class="link">Green Guy</a></h3>
-										<p>Social media app that promotes ecology</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/dpp.PNG" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Decentralised Task-distribution in Peer-to-Peer Networks</a></h3>
+										<h3><a href="project_netlogo.html" class="link">Decentralised Task-distribution in Peer-to-Peer Networks</a></h3>
 										<p>Multi-agent system that achieves decentralised task-distribution in peer-to-peer networks</p>
 									</header>
 								</article>
-
-<article>
+								<article>
+								<span class="image">
+									<img src="images/cap.png" alt="" />
+								</span>
+								<header class="major">
+									<h3><a href="project_greenguy.html" class="link">Green Guy</a></h3>
+									<p>Social media app that promotes ecology</p>
+								</header>
+							</article>
+								<article>
 									<span class="image">
 										<img src="images/maze.PNG" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">3D Maze</a></h3>
+										<h3><a href="project_maze.html" class="link">3D Maze</a></h3>
 										<p>3 dimensional maze using the Dijkstra algorithm built with Java 3d</p>
 									</header>
 								</article>							</section>
