--- a/exp_praxion.html
+++ b/exp_praxion.html
@@ -39,11 +39,11 @@
 					</nav>
 
 				<!-- Main -->
-					<div id="main" class="alt">
+					<div id="main" >
 
 						<!-- One -->
 							<section id="one">
-								<div class="inner">
+								<div  style="margin:20px !important; ">
 									<header class="major">
 										<h1>Praxion - Web developer intern <i>Jul. 2020 - Aug. 2020</i></h1>
 									</header>
