--- a/other_ue4.html
+++ b/other_ue4.html
@@ -50,7 +50,9 @@
 									<span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/SfXXX-F2Iwo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
 									<p>Forumshooter is a Shoot 'em up style game that was created for a school event using Unreal Engine 4</p>
 									<p>It has been developed for PC but a light version exists for the Android platform.</p>	
-											
+									<iframe frameborder="0" src="https://itch.io/embed/493765?linkback=true" width="552" height="167"><a href="https://anh-vu.itch.io/forumshooter">ForumShooter by Anh-Vu</a></iframe>
+
+									
 									<ul class="actions">
 												<li><a href="https://anh-vu.itch.io/forumshooter" target="_blank" class="button">PC Version Page</a></li>
 												<li><a href="https://play.google.com/store/apps/details?id=com.YourCompany.ForumShooterAndroid" target="_blank"  class="button ">Play Store (Android)</a></li>
