--- a/project_maze.html
+++ b/project_maze.html
@@ -11,7 +11,7 @@
 
   gtag('config', 'G-46ZV27WEJS');
 </script>
-		<title>Green Guy Project</title>
+		<title>3D Maze</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -54,7 +54,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Green Guy</h1>
+										<h1>3D Maze</h1>
 									</header>
 									<span class="video main"><video width="500" controls>
   <source src="images/mazevid.mp4" type="video/mp4">
